# springyHexMesh

./: CMakeLists.txt  README.md
springyHexMesh/: CMakeLists.txt
springyHexMesh/include/: hm_dump.h  hm_dumpObj.h  hm_forwardDeclarations.h  hm_grid.h  hm_gridBase.h  hm_gridCell.h  hm_gridCellEnergy.h  hm_gridEdge.h  hm_gridFace.h  hm_gridVert.h  hm_macros.h  hm_model.h  hm_optimizer.h  hm_paramsRec.h  hm_polylineFitter.h  hm_splitter.h  hm_tables.h  hm_topolRef.h  hm_types.h  meshProcessor.h
springyHexMesh/src/: hm_dump.cpp  hm_dumpObj.cpp  hm_grid.cpp  hm_gridBase.cpp  hm_gridCell.cpp  hm_gridCellEnergy.cpp  hm_gridEdge.cpp  hm_gridFace.cpp  hm_gridIO_Read_v_1.cpp  hm_gridVert.cpp  hm_model.cpp  hm_paramsRec.cpp  hm_polylineFitter.cpp  hm_splitter.cpp  hm_topolRef.cpp  hm_types.cpp  meshProcessor.cpp  springyHexMesh.cxx
viewer/: CMakeLists.txt
viewer/include/: hm_ui_grid.h  hm_ui_gridIndexNode.h  hm_ui_gridTriNode.h  hm_ui_modelEdges.h  hm_ui_root.h
viewer/shaders/: shader_grid_wireframe.frag  shader_grid_wireframe.vert
viewer/src/: hm_ui_grid.cpp  hm_ui_gridIndexNode.cpp  hm_ui_gridTriNode.cpp  hm_ui_modelEdges.cpp  hm_ui_root.cpp  viewer.cxx
